--- a/www/css/main.html
+++ b/www/css/main.html
@@ -26,29 +26,27 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/signin.css" />
-        <title>Sign in</title>
+        <link rel="stylesheet" type="text/css" href="css/register.css" />
+        <title>Welcome Stylish</title>
     </head>
     <body>
         <div class="app">
             <h1>Stylish</h1>
-				<div class="loginForm">
-					<form id="loginForm">
-						<div>
-							<input type="text" name="username" id="username" value="" placeholder="Username" />
-						</div>
-						<div>
-							<input type="password" name="password" id="password" value="" placeholder="Password" />
-						</div>
-						<div>
-							<button type="button" name="signin" id="signin" onclick="alert('controls + signin ')"> Sign in </button>
-						</div>					
-					</form>		
-				</div>
-				<div>
-					<a href="./register.html">
-						Register
-					</a>
+				<div class="navMenu" id="navMenu">
+					<ul>
+						<li>
+							Vote
+						</li>
+						<li>
+							Take Picture
+						</li>
+						<li>
+							My Pictures
+						</li>
+						<li>
+							My Rankings
+						</li>
+					</ul>
 				</div>
 				
         </div>
