--- a/www/main.html
+++ b/www/main.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <!--
     Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
@@ -26,30 +28,42 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/register.css" />
-        <title>Welcome Stylish</title>
+        <link rel="stylesheet" type="text/css" href="css/signin.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script>
+			$(document).bind('mobileinit',function(){
+				$.mobile.changePage.defaults.changeHash = false;
+				$.mobile.hashListeningEnabled = false;
+				$.mobile.pushStateEnabled = false;
+			});
+		</script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <title>Home</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Stylish</h1>
-				<div class="navMenu" id="navMenu">
-					<ul>
-						<li>
-							Vote
-						</li>
-						<li>
-							Take Picture
-						</li>
-						<li>
-							My Pictures
-						</li>
-						<li>
-							My Rankings
-						</li>
-					</ul>
-				</div>
-				
-        </div>
+		<div class="app>"
+            <div data-role="page">
+				<div data-role="header">
+					<h1>Stylish</h1>
+				</div><!-- /header -->
+		 
+				<div data-role="content">
+					<p>Hello world</p>
+				</div><!-- /content -->
+		 
+				<div data-role="footer">
+					<div data-role="navbar" class="navbar" data-grid="c">
+						<ul>
+							<li><a href="#" id="eye" data-icon="eye"></a></li>
+							<li><a href="#" id="camera" data-icon="camera"></a></li>
+							<li><a href="#" id="pictures" data-icon="cloud"></a></li>
+							<li><a href="#" id="user" data-icon="user"></a></li>
+						</ul>
+					</div>
+				</div><!-- /footer -->
+			</div><!-- /page -->
+		</div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
@@ -57,3 +71,4 @@
         </script>
     </body>
 </html>
+
