--- a/www/signin.html
+++ b/www/signin.html
@@ -27,35 +27,59 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/signin.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script>
+			$(document).bind('mobileinit',function(){
+				$.mobile.changePage.defaults.changeHash = false;
+				$.mobile.hashListeningEnabled = false;
+				$.mobile.pushStateEnabled = false;
+			});
+		</script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <title>Sign in</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Stylish</h1>
-				<div class="loginForm">
-					<form id="loginForm">
-						<div>
-							<input type="text" name="username" id="username" value="" placeholder="Username" />
-						</div>
-						<div>
-							<input type="password" name="password" id="password" value="" placeholder="Password" />
-						</div>
-						<div>
-							<button type="button" name="signin" id="signin" onclick="alert('controls + signin ')"> Sign in </button>
-						</div>					
-					</form>		
-				</div>
-				<div>
-					<a href="./register.html">
-						Register
-					</a>
-				</div>
-				
+		<div class="app">
+			<div data-role="page">
+				<div data-role="header">
+					<h1>Stylish</h1>
+				</div><!-- /header -->
+				<div data-role="content">
+					<div class="loginForm">
+						<form id="loginForm">
+							<div>
+								<input type="text" name="username" id="username" value="" placeholder="Username" />
+							</div>
+							<div>
+								<input type="password" name="password" id="password" value="" placeholder="Password" />
+							</div>
+							<div>
+								<fieldset data-role="controlgroup">                
+									<label> Keep me signed in<input type="checkbox" name="chk-keep-signed-in" id="chk-keep-signed-in"/></label>
+								</fieldset>	
+							</div>
+							<div>
+								<button type="button" name="signin" id="signin" onclick="alert('controls + signin ')"> Sign in </button>
+							</div>
+						
+						</form>		
+					</div>
+					<div>
+						<a href="./register.html">
+							Register
+						</a>
+					</div>
+				</div><!-- /content -->
+				<div data-role="footer">
+				</div><!-- /footer -->
+			</div><!-- /page -->
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
+		
     </body>
 </html>
