--- a/www/main.html
+++ b/www/main.html
@@ -42,7 +42,7 @@
         <title>Home</title>
     </head>
     <body>
-		<div class="app>"
+		<div class="app">
             <div data-role="page">
 				<div data-role="header">
 					<h1>Stylish</h1>
