--- a/www/signin.html
+++ b/www/signin.html
@@ -43,7 +43,7 @@
 		<div class="app">
 			<div data-role="page">
 				<div data-role="header">
-					<h1>Stylish</h1>
+					<h1>Sign In</h1>
 				</div><!-- /header -->
 				<div data-role="content">
 					<div class="loginForm">
