--- a/www/account-locked.html
+++ b/www/account-locked.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    <title>Stylish - Welcome</title>
+    <title>CStylish - Account Locked</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" href="css/app.css" />
@@ -14,20 +14,17 @@
 			});
 		</script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <title>Stylish - Landing</title>
+        <title>Stylish - Sign in</title>
     </head>
     <body>
 		<div data-role="page">
 			<div data-role="header" data-theme="a">
-				<h1>Stylish</h1>
+				<a href="sign-in.html" data-rel="back" class="ui-btn-left ui-btn  ui-btn-icon-notext ui-corner-all ui-icon-back">Back</a>
+				<h1>App Name</h1>
 			</div><!-- /header -->
-			<div data-role="content" class="ui-content">
-				<h2 class="mc-text-center">Welcome!</h2>
-				<p class="mc-top-margin-1-5"><b>Existing Users</b></p>
-				<a href="sign-in.html" class="ui-btn ui-btn-b ui-corner-all">Sign In</a>
-				<p class="mc-top-margin-1-5"><b>Don't have an account?</b></p>
-				<a href="sign-up.html" class="ui-btn ui-btn-b ui-corner-all">Sign Up</a>
-				<p></p>
+			<div data-role="content" class="ui-content">            
+				<h2 class="mc-text-danger">Your Account is Locked</h2>
+			<p>Please contact the <a href="mailto:">HelpDesk</a> to resolve this issue.</p>
 			</div><!-- /content -->
 		</div><!-- /page -->
 	</body>
