--- a/www/sign-in.html
+++ b/www/sign-in.html
@@ -17,7 +17,7 @@
         <title>Stylish - Sign in</title>
     </head>
     <body>
-		<div data-role="page">
+		<div data-role="page" id="page-signup">
 			<div data-role="header" data-theme="a">
 				<h1>Stylish</h1>
 			</div><!-- /header -->
