--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" href="css/app.css" />
-		<script src="js/settings.js" type="text/javascript"></script>
-		<script src="js/api-messages.js" type="text/javascript"></script>
 		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script>
 			$(document).bind('mobileinit',function(){
@@ -16,6 +14,9 @@
 			});
 		</script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="js/settings.js" type="text/javascript"></script>
+		<script src="js/api-messages.js" type="text/javascript"></script>
+		<script src="js/sign-up.js" type="text/javascript"></script>
         <title>Stylish - Landing</title>
     </head>
     <body>
