--- a/www/sign-up.html
+++ b/www/sign-up.html
@@ -14,15 +14,19 @@
 			});
 		</script>
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="js/settings.js" type="text/javascript"></script>
+		<script src="js/api-messages.js" type="text/javascript"></script>
+		<script src="js/sign-up.js" type="text/javascript"></script>
         <title>Stylish - Sign Up</title>
     </head>
     <body>
-		<div data-role="page">
+		<div data-role="page"  id="page-signup">
 			<div data-role="header" data-theme="a">
-				<h1>Book It</h1>
+				<h1>Stylish</h1>
 			</div><!-- /header -->
 			<div data-role="content" class="ui-content">
 				<h3>Sign Up</h3>
+				<div id="ctn-err" class="bi-invisible"></div>
 				<label for="txt-first-name">First Name</label>
 				<input type="text" name="txt-first-name" id="txt-first-name" value="">
 				<label for="txt-last-name">Last Name</label>
@@ -33,7 +37,8 @@
 				<input type="password" name="txt-password" id="txt-password" value="">
 				<label for="txt-password-confirm">Confirm Password</label>
 				<input type="password" name="txt-password-confirm" id="txt-password-confirm" value="">
-				<a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>
+				<!--<a href="#dlg-sign-up-sent" data-rel="popup" data-transition="pop" data-position-to="window" id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</a>-->
+				<button id="btn-submit" class="ui-btn ui-btn-b ui-corner-all mc-top-margin-1-5">Submit</button>
 				<div data-role="popup" id="dlg-sign-up-sent" data-dismissible="false" style="max-width:400px;">
 					<div data-role="header">
 						<h1>Almost done...</h1>
